<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">
        <TextView
            android:id="@+id/descripcion_metodo_pago"
            style="@style/TituloFragmento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minutos_usados"
                style="@style/text_view_default"/>
            <TextView
                android:id="@+id/minutos_usados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_view_read_only"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor_cobrado"
                style="@style/text_view_default"/>
            <TextView
                android:id="@+id/valor_cobrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_view_read_only"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo_disponible"
                style="@style/text_view_default"/>
            <TextView
                android:id="@+id/saldo_disponible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_view_read_only"/>
            <Button
                android:id="@+id/aceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                style="@style/BotonNormal"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

